Make sure all commands are finished before shutting down.

This fixes a potential crash when the DMS model is deleted while
another thread is still working on some command.
BUG: 279492